# mackerel

./: .gitignore  .pre-commit-config.yaml  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  NOTES.md  README.md  README.rst  TODO.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  shell.nix
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: .mackerelconfig  mackerelconfig.toml
docs/content/: LICENSE  README.md  index.md
docs/template/: base.html  layout.html
docs/template/_static/: custom.css  pygments.css  styles.css
docs/template/assets/: custom.css  styles.css
mackerel/: __init__.py  __version__.py  build.py  cli.py  config.ini  content.py  exceptions.py  helpers.py  navigation.py  renderer.py  renderers.py  site.py
mackerel/renderers/: __init__.py  base.py  document.py  helpers.py  template.py
mackerel/site/: .mackerelconfig
mackerel/site/content/: notes.txt
mackerel/site/template/: default.html  index.html  page.html  post.html
mackerel/site/template/partials/: loop.html
src/mackerel/: __init__.py  build.py  cli.py  config.py  navigation.py  parsers.py  renderers.py  types.py
src/mackerel/site/: mackerelconfig.toml
src/mackerel/site/content/: about.md  index.md  unknown_template.md
src/mackerel/site/content/posts/: hello-world.md  index.md  second.md
src/mackerel/site/content/posts/2017/: post.md
src/mackerel/site/old_content/: faulty.md
src/mackerel/site/old_content/posts/: test_post.md
src/mackerel/site/template/: default.html
src/mackerel/site/templates/bfmw/: base.html  page.html
src/mackerel/site/templates/example/: post.html
src/mackerel/site/templates/starter/: base.html  footer.html  header.html  home.html  list.html  nav.html  page.html
tests/: __init__.py  conftest.py  test_build.py  test_cli.py  test_config.py  test_config_ini.py  test_content.py  test_helpers.py  test_navigation.py  test_parsers.py  test_renderer.py  test_renderers.py  test_site.py
tests/content/: document.md
tests/content/posts/2017/: post.md
tests/renderers/: test_base.py  test_document.py  test_helpers.py  test_template.py
tests/site/: .mackerelconfig  mackerelconfig.toml
tests/site/content/: about.md  bad_document.md  document.md  index.md  notes.txt
tests/site/content/posts/: index.md  test_post.md
tests/site/content/posts/2017/: post.md
tests/site/content/sub/: document.md
tests/site/template/: default.html  document.html  index.html  post.html
tests/site/template/_static/css/: screen.css
tests/site/template/partials/: loop.html  navigation.html
tests/templates/: document.html  post.html
tests/test-site/: mackerelconfig.toml
tests/test-site/content/: document.md
tests/test-site/content/sub/: document.md
tests/test-site/template/: document.jhtml  style.css  subdocument.jhtml
(+1 files in other folders)
